[Misc] Reduce SonarQube + IJ violation count